// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Line" renders (dark theme) 1`] = `
<div
  className="css-1mc7zwm-StyledAppContainer"
>
  <hr
    className="css-6n7l8x-Line"
  >
    Line
  </hr>
</div>
`;

exports[`"Line" renders 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <hr
    className="css-6n7l8x-Line"
  >
    Line
  </hr>
</div>
`;

exports[`"Line" renders with color 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <hr
    className="css-hqylb4-Line"
    color="#e02020"
  >
    Line
  </hr>
</div>
`;
